fix z-index (less than modal)

--- a/assets/css/global/hacks.css
+++ b/assets/css/global/hacks.css
@@ -10,5 +10,4 @@ img {max-width:100%; height:auto}
     overflow-y: auto;
     height: 90vh;
 }
-.z-index-max { z-index: 9999; }
-
+.z-index-39 { z-index: 39; }
